# bondtrade

./: .gitignore  CMakeLists.txt  Dockerfile  README.MD  conanfile.txt  docker-compose.yml
doc/papers/: pospelov_aa_modelirovanie_kreditnogo_reytinga_rossiyskih_emitentov.docx  Дипломная_работа_ФИНАЛ_29,04_Зайцева.docx  Митерев-2.docx
src/parser/: CMakeLists.txt
src/parser/hpp/: Config.hpp  MicexAuth.hpp  MicexISSClient.hpp   MicexISSDataHandler.hpp  MyData.hpp  MyDataHandler.hpp
src/parser/src/: Config.cpp  MicexAuth.cpp  MicexISSClient.cpp  MyData.cpp  MyDataHandler.cpp
